--- a/coc.html
+++ b/coc.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>SVG手書き文字ジェネレーター（1文字ずつ・回転フェード付き）</title>
+<title>SVG手書き文字ジェネレーター（上下分割フェードアウト）</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
   body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans","Apple Color Emoji","Segoe UI Emoji";margin:24px;line-height:1.6}
@@ -16,7 +16,7 @@
   .hint{font-size:12px;color:#555}
 </style>
 
-<h1>SVG手書き文字ジェネレーター（1文字ずつ・回転フェード付き）</h1>
+<h1>SVG手書き文字ジェネレーター（上下分割フェードアウト）</h1>
 
 <fieldset>
   <legend>設定</legend>
@@ -24,54 +24,30 @@
     <div>
       <label>① テキスト</label>
       <input id="text" type="text" value="Call of Cthulhu">
-      <div class="hint">横書き。空白は間として扱います（描画はしません）。</div>
     </div>
     <div>
       <label>② 文字色</label>
       <input id="color" type="text" value="#000000">
-      <div class="hint">例: #000, black, rgb(0,0,0) など</div>
     </div>
   </div>
-
   <div class="row">
     <div>
       <label>③ 文字サイズ（px）</label>
-      <input id="fontSize" type="number" value="72" min="8" step="1">
-      <div class="hint">推奨：36〜120</div>
+      <input id="fontSize" type="number" value="72">
     </div>
     <div>
       <label>④ フォント</label>
       <select id="fontFamily">
-        <option value="serif" selected>serif（明朝系）</option>
-        <option value="sans-serif">sans-serif（ゴシック系）</option>
+        <option value="serif" selected>serif</option>
+        <option value="sans-serif">sans-serif</option>
         <option value="monospace">monospace</option>
-        <option value="Georgia, serif">Georgia</option>
-        <option value="Times New Roman, serif">Times New Roman</option>
-        <option value="Arial, Helvetica, sans-serif">Arial</option>
-        <option value="Tahoma, sans-serif">Tahoma</option>
-        <option value="Verdana, sans-serif">Verdana</option>
       </select>
-      <div class="hint">OSにあるフォントを使用します。</div>
     </div>
   </div>
-
   <div class="row">
     <div>
       <label>⑤ 文字間（px）</label>
-      <input id="letterSpacing" type="number" value="2" step="0.5">
-      <div class="hint">正の値で広く、負の値で狭く。</div>
-    </div>
-    <div>
-      <label>描画時間（1文字の基準秒）</label>
-      <input id="baseDur" type="number" value="0.75" step="0.05" min="0.05">
-      <div class="hint">幅に応じて自動補正されます。</div>
-    </div>
-  </div>
-
-  <div class="row">
-    <div>
-      <label>キャンバス（固定）</label>
-      <input disabled value="768 × 432（16:9・24px倍数）">
+      <input id="letterSpacing" type="number" value="2">
     </div>
     <div class="actions" style="align-items:end">
       <button id="build">SVGを生成</button>
@@ -82,7 +58,7 @@
 </fieldset>
 
 <fieldset>
-  <legend>⑥ プレビュー（実寸 768×432）</legend>
+  <legend>プレビュー（768×432）</legend>
   <div class="preview" id="previewArea">ここにSVGが表示されます</div>
 </fieldset>
 
@@ -92,132 +68,72 @@
 </fieldset>
 
 <script>
-  // 幅計測用キャンバス
-  const measureCanvas = document.createElement('canvas');
-  const mctx = measureCanvas.getContext('2d');
-  function measureWidth(ch, size, family){
-    mctx.font = `${size}px ${family}`;
-    return mctx.measureText(ch).width;
-  }
-  function escapeXML(s){
-    return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');
-  }
+const measureCanvas = document.createElement('canvas');
+const mctx = measureCanvas.getContext('2d');
+function measureWidth(ch, size, family){
+  mctx.font = `${size}px ${family}`;
+  return mctx.measureText(ch).width;
+}
+function escapeXML(s){return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');}
 
-  function buildSVG(){
-    const txt = document.getElementById('text').value ?? '';
-    const color = document.getElementById('color').value || '#000';
-    const size = Math.max(8, Number(document.getElementById('fontSize').value || 72));
-    const family = document.getElementById('fontFamily').value || 'serif';
-    const letter = Number(document.getElementById('letterSpacing').value || 0);
-    const baseDur = Math.max(0.05, Number(document.getElementById('baseDur').value || 0.75));
+function buildSVG(){
+  const txt = document.getElementById('text').value;
+  const color = document.getElementById('color').value || '#000';
+  const size = Number(document.getElementById('fontSize').value);
+  const family = document.getElementById('fontFamily').value;
+  const letter = Number(document.getElementById('letterSpacing').value);
 
-    const W = 768, H = 432;
-    const baselineY = Math.round(H/2) + Math.round(size*0.35);
+  const W=768,H=432,baseY=H/2+size*0.35;
+  const chars=[...txt];
+  const widths=chars.map(ch=>measureWidth(ch,size,family));
+  const total=widths.reduce((a,b)=>a+b,0)+(chars.length-1)*letter;
+  let x=(W-total)/2;
+  let id=0,begin='0s';
+  const defs=[],lines=[],fills=[];
+  const strokeW=size*0.38;
+  chars.forEach((ch,i)=>{
+    const w=widths[i];
+    if(ch===' '){x+=w+letter;return;}
+    const thisId=`a${++id}`;
+    const dash=w*12,dur=(0.7*(w/size)).toFixed(3)+'s';
+    defs.push(`<mask id="m${id}"><text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="none" stroke="#fff" stroke-width="${strokeW}" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">${escapeXML(ch)}<animate attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text></mask>`);
+    lines.push(`<text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="none" stroke="${color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">${escapeXML(ch)}<animate id="${thisId}" attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text>`);
+    fills.push(`<text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="${color}" mask="url(#m${id})">${escapeXML(ch)}</text>`);
+    begin=`${thisId}.end+0.08s`;
+    x+=w+letter;
+  });
 
-    const chars = [...txt];
-    const widths = chars.map(ch => measureWidth(ch, size, family));
-    const total = widths.reduce((a,b)=>a+b,0) + Math.max(0, chars.length-1)*letter;
-    const startX = (W - total)/2;
-
-    const maskStroke = Math.max(8, size * 0.38);
-    const dashFor = w => Math.max(300, w * 12);
-    const durFor  = w => (baseDur * Math.max(0.5, Math.min(1.5, w / (size * 0.6)))).toFixed(3) + 's';
-
-    let x = startX;
-    let beginId = '0s';
-    let idSeq = 0; // 非スペースのみに採番
-
-    const defs = [];
-    const outlines = [];
-    const fills = [];
-
-    chars.forEach((ch, idx) => {
-      const w = widths[idx];
-      if (ch === ' '){
-        // スペースではIDを作らず、タイミングも進めない（描画チェーンを維持）
-        x += w + letter;
-        return;
-      }
-      const thisId = `a${++idSeq}`;
-      const nextBegin = `${thisId}.end+0.08s`;
-      const dash = Math.round(dashFor(w));
-      const dur = durFor(w);
-      const mx = Math.round(x);
-
-      // マスク（白ストロークで塗り露出）
-      defs.push(
-        `<mask id="m${idSeq}">` +
-        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="none" stroke="#fff" stroke-width="${maskStroke}" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">` +
-        `${escapeXML(ch)}<animate attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${beginId}" fill="freeze"/></text>` +
-        `</mask>`
-      );
-
-      // アウトライン（書画線）
-      outlines.push(
-        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="none" stroke="${color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">` +
-        `${escapeXML(ch)}<animate id="${thisId}" attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${beginId}" fill="freeze"/></text>`
-      );
-
-      // 塗り（描いた軌跡のみ可視）
-      fills.push(
-        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="${color}" mask="url(#m${idSeq})">${escapeXML(ch)}</text>`
-      );
-
-      beginId = nextBegin;
-      x += w + letter;
-    });
-
-    // 全体を包む <g id="all">（回転＋フェード対象）
-    const lastId = idSeq > 0 ? `a${idSeq}` : null;
-    const rotateDur = '2s';
-    const fadeDur   = '1.5s';
-    const beginAll  = lastId ? `${lastId}.end+1s` : '0s'; // 文字が無い場合でも動作
-
-    const svg =
-`<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="${W}" height="${H}" viewBox="0 0 ${W} ${H}">
-  <!-- 背景は透明・SVG単体（SMIL） -->
-  <defs>
-    ${defs.join('\n    ')}
-  </defs>
-
-  <g id="all" transform-origin="${W/2} ${H/2}">
-    <!-- 書いている線（輪郭） -->
-    ${outlines.join('\n    ')}
-
-    <!-- 塗り（描いた軌跡にだけ表示） -->
-    ${fills.join('\n    ')}
+  const last=`a${id}`;
+  const halfY=H/2;
+  const animDur='1.2s';
+  const svg=`<svg xmlns="http://www.w3.org/2000/svg" width="${W}" height="${H}" viewBox="0 0 ${W} ${H}">
+  <defs>${defs.join('\n')}</defs>
+  <g id="all">
+    ${lines.join('\n')}
+    ${fills.join('\n')}
   </g>
+  <!-- 上半分 -->
+  <mask id="maskTop"><rect x="0" y="0" width="${W}" height="${halfY}" fill="#fff"/></mask>
+  <!-- 下半分 -->
+  <mask id="maskBottom"><rect x="0" y="${halfY}" width="${W}" height="${halfY}" fill="#fff"/></mask>
 
-  <!-- 全体回転＋フェードアウト -->
-  <animateTransform xlink:href="#all" attributeName="transform" type="rotate"
-                    from="0 ${W/2} ${H/2}" to="360 ${W/2} ${H/2}"
-                    dur="${rotateDur}" begin="${beginAll}" fill="freeze"/>
-  <animate xlink:href="#all" attributeName="opacity"
-           from="1" to="0" dur="${fadeDur}" begin="${beginAll}" fill="freeze"/>
+  <use href="#all" mask="url(#maskTop)">
+    <animateTransform attributeName="transform" type="translate" from="0 0" to="200 0" dur="${animDur}" begin="${last}.end+1s" fill="freeze"/>
+    <animate attributeName="opacity" from="1" to="0" dur="${animDur}" begin="${last}.end+1s" fill="freeze"/>
+  </use>
+  <use href="#all" mask="url(#maskBottom)">
+    <animateTransform attributeName="transform" type="translate" from="0 0" to="-200 0" dur="${animDur}" begin="${last}.end+1s" fill="freeze"/>
+    <animate attributeName="opacity" from="1" to="0" dur="${animDur}" begin="${last}.end+1s" fill="freeze"/>
+  </use>
 </svg>`;
 
-    document.getElementById('code').value = svg;
-    document.getElementById('previewArea').innerHTML = svg;
-  }
+  document.getElementById('code').value=svg;
+  document.getElementById('previewArea').innerHTML=svg;
+}
 
-  document.getElementById('build').addEventListener('click', e => { e.preventDefault(); buildSVG(); });
-  document.getElementById('copy').addEventListener('click', e => {
-    e.preventDefault();
-    const t = document.getElementById('code');
-    t.select(); t.setSelectionRange(0, 999999);
-    document.execCommand('copy');
-  });
-  document.getElementById('download').addEventListener('click', e => {
-    e.preventDefault();
-    const svg = document.getElementById('code').value || '';
-    const blob = new Blob([svg], {type:'image/svg+xml;charset=utf-8'});
-    const url = URL.createObjectURL(blob);
-    const a = document.createElement('a');
-    a.href = url; a.download = 'handwrite.svg';
-    document.body.appendChild(a); a.click(); a.remove();
-    URL.revokeObjectURL(url);
-  });
+document.getElementById('build').onclick=e=>{e.preventDefault();buildSVG();};
+document.getElementById('copy').onclick=e=>{e.preventDefault();const t=document.getElementById('code');t.select();document.execCommand('copy');};
+document.getElementById('download').onclick=e=>{e.preventDefault();const s=document.getElementById('code').value;const b=new Blob([s],{type:'image/svg+xml'});const u=URL.createObjectURL(b);const a=document.createElement('a');a.href=u;a.download='handwrite.svg';a.click();URL.revokeObjectURL(u);};
 
-  // 初期生成
-  buildSVG();
+buildSVG();
 </script>
