--- a/coc.html
+++ b/coc.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <meta charset="utf-8">
-<title>SVG手書き文字ジェネレーター（複製→上下分割消滅）</title>
+<title>SVG手書き文字ジェネレーター（上下分割・左右消滅・完全版）</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans";margin:24px;line-height:1.6}
+  body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,"Noto Sans JP",sans-serif;margin:24px;line-height:1.6}
   fieldset{border:1px solid #ccc;border-radius:8px;padding:12px;margin-bottom:16px}
   label{display:block;font-size:13px;margin:6px 0 2px}
   input,select,button,textarea{font:inherit}
@@ -11,11 +11,11 @@
   .row{display:grid;grid-template-columns:1fr 1fr;gap:12px}
   .actions{display:flex;gap:8px;flex-wrap:wrap;margin-top:8px}
   .preview{border:1px dashed #bbb;border-radius:8px;display:flex;align-items:center;justify-content:center;background:#fafafa;min-height:460px}
-  textarea{width:100%;box-sizing:border-box;height:200px;padding:8px;border:1px solid #bbb;border-radius:8px;font-family:monospace;font-size:12px}
+  textarea{width:100%;box-sizing:border-box;height:220px;padding:8px;border:1px solid #bbb;border-radius:8px;font-family:ui-monospace,Consolas,Menlo,monospace;font-size:12px;white-space:pre}
   .hint{font-size:12px;color:#555}
 </style>
 
-<h1>SVG手書き文字ジェネレーター（複製→上下分割消滅）</h1>
+<h1>SVG手書き文字ジェネレーター（上下分割→左右消滅）</h1>
 
 <fieldset>
   <legend>設定</legend>
@@ -29,30 +29,57 @@
       <input id="color" type="text" value="#000000">
     </div>
   </div>
+
   <div class="row">
     <div>
       <label>③ 文字サイズ（px）</label>
       <input id="fontSize" type="number" value="72" min="8" step="1">
     </div>
     <div>
-      <label>④ フォント</label>
-      <select id="fontFamily">
-        <option value="serif" selected>serif</option>
-        <option value="sans-serif">sans-serif</option>
-        <option value="monospace">monospace</option>
+      <label>④ フォント（候補）</label>
+      <select id="fontFamilySelect">
+        <option value="serif" selected>serif（明朝系・汎用）</option>
+        <option value="sans-serif">sans-serif（ゴシック系・汎用）</option>
+        <option value="monospace">monospace（等幅）</option>
+        <option value="Georgia, serif">Georgia</option>
+        <option value="Times New Roman, serif">Times New Roman</option>
+        <option value="Garamond, serif">Garamond</option>
+        <option value="Palatino, serif">Palatino</option>
+        <option value="Arial, Helvetica, sans-serif">Arial</option>
+        <option value="Verdana, sans-serif">Verdana</option>
+        <option value="Tahoma, sans-serif">Tahoma</option>
+        <option value="Trebuchet MS, sans-serif">Trebuchet MS</option>
+        <option value="Impact, sans-serif">Impact</option>
+        <option value="Courier New, monospace">Courier New</option>
+        <option value="Noto Sans JP, sans-serif">Noto Sans JP（端末にある場合）</option>
       </select>
+      <div class="hint">※下の「任意フォント」に値がある場合はこちらを優先します。</div>
     </div>
   </div>
+
   <div class="row">
+    <div>
+      <label>④-補 任意フォント指定（空なら上の選択を使用）</label>
+      <input id="fontFamilyFree" type="text" placeholder="例）'Yu Mincho', 'Hiragino Mincho ProN', serif">
+    </div>
     <div>
       <label>⑤ 文字間（px）</label>
       <input id="letterSpacing" type="number" value="2" step="0.5">
     </div>
+  </div>
+
+  <div class="row">
     <div>
-      <label>⑥ フェード秒数（s）</label>
-      <input id="fadeSec" type="number" value="1.2" step="0.1">
+      <label>⑥ 1文字の基準描画秒（baseDur, s）</label>
+      <input id="baseDur" type="number" value="0.75" step="0.05" min="0.05">
+      <div class="hint">大きいほどゆっくり。字幅で自動補正します。</div>
+    </div>
+    <div>
+      <label>⑦ 分割・消滅の秒数（s）</label>
+      <input id="fadeSec" type="number" value="1.2" step="0.1" min="0.1">
     </div>
   </div>
+
   <div class="actions">
     <button id="build">SVGを生成</button>
     <button id="copy">SVGをコピー</button>
@@ -61,7 +88,7 @@
 </fieldset>
 
 <fieldset>
-  <legend>プレビュー</legend>
+  <legend>プレビュー（768×432）</legend>
   <div class="preview" id="previewArea">ここにSVGが表示されます</div>
 </fieldset>
 
@@ -71,78 +98,123 @@
 </fieldset>
 
 <script>
-const measureCanvas=document.createElement('canvas');
-const mctx=measureCanvas.getContext('2d');
-function measureWidth(ch,size,family){mctx.font=`${size}px ${family}`;return mctx.measureText(ch).width;}
-function esc(s){return s.replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');}
+  // 計測キャンバス
+  const measureCanvas=document.createElement('canvas');
+  const mctx=measureCanvas.getContext('2d');
+  function measureWidth(ch,size,family){mctx.font=`${size}px ${family}`;return mctx.measureText(ch).width;}
+  function esc(s){return String(s).replace(/&/g,'&amp;').replace(/</g,'&lt;').replace(/>/g,'&gt;');}
 
-function buildSVG(){
-  const txt=document.getElementById('text').value||'';
-  const color=document.getElementById('color').value||'#000';
-  const size=Number(document.getElementById('fontSize').value||72);
-  const family=document.getElementById('fontFamily').value||'serif';
-  const letter=Number(document.getElementById('letterSpacing').value||0);
-  const fadeSec=Number(document.getElementById('fadeSec').value||1.2);
+  function buildSVG(){
+    const txt=document.getElementById('text').value||'';
+    const color=document.getElementById('color').value||'#000';
+    const size=Math.max(8, Number(document.getElementById('fontSize').value||72));
+    const familyFree=(document.getElementById('fontFamilyFree').value||'').trim();
+    const familySel=document.getElementById('fontFamilySelect').value;
+    const family=familyFree||familySel;
+    const letter=Number(document.getElementById('letterSpacing').value||0);
+    const baseDur=Math.max(0.05, Number(document.getElementById('baseDur').value||0.75));
+    const fadeSec=Math.max(0.1, Number(document.getElementById('fadeSec').value||1.2));
 
-  const W=768,H=432,baseY=H/2+size*0.35;
-  const chars=[...txt];
-  const widths=chars.map(c=>measureWidth(c,size,family));
-  const total=widths.reduce((a,b)=>a+b,0)+(chars.length-1)*letter;
-  let x=(W-total)/2,begin='0s',id=0;
-  const strokeW=size*0.38;
-  const defs=[],lines=[],fills=[];
-  chars.forEach((ch,i)=>{
-    const w=widths[i];
-    if(ch===' '){x+=w+letter;return;}
-    const thisId=`a${++id}`;
-    const dash=w*12;
-    const dur=(0.7*(w/size)).toFixed(3)+'s';
-    defs.push(`<mask id="m${id}"><text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="none" stroke="#fff" stroke-width="${strokeW}" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">${esc(ch)}<animate attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text></mask>`);
-    lines.push(`<text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="none" stroke="${color}" stroke-width="2" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">${esc(ch)}<animate id="${thisId}" attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text>`);
-    fills.push(`<text x="${x}" y="${baseY}" font-family="${family}" font-size="${size}" fill="${color}" mask="url(#m${id})">${esc(ch)}</text>`);
-    begin=`${thisId}.end+0.08s`;
-    x+=w+letter;
-  });
-  const last=`a${id}`;
-  const halfY=H/2;
+    const W=768,H=432;
+    const baselineY=Math.round(H/2)+Math.round(size*0.35);
 
-  const svg=`<svg xmlns="http://www.w3.org/2000/svg" width="${W}" height="${H}" viewBox="0 0 ${W} ${H}">
-  <defs>${defs.join('\n')}</defs>
+    const chars=[...txt];
+    // 幅測定
+    const widths=chars.map(ch=>measureWidth(ch,size,family));
+    const total=widths.reduce((a,b)=>a+b,0)+Math.max(0,chars.length-1)*letter;
+    let x=(W-total)/2;
 
-  <!-- 下レイヤー（描き終わった後フェードアウト） -->
-  <g id="layer_bottom">
-    ${lines.join('\n')}
-    ${fills.join('\n')}
-    <animate xlink:href="#layer_bottom" attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${last}.end+0.5s" fill="freeze"/>
+    // 文字描画パラメータ
+    const strokeW=Math.max(8, size*0.38);
+    const dashFor=w=>Math.max(300, w*12);
+    const durFor=w=>(baseDur*Math.max(0.5, Math.min(1.6, w/(size*0.6)))).toFixed(3)+'s';
+
+    // 生成
+    let begin='0s', id=0;
+    const defs=[], outlines=[], fills=[];
+    chars.forEach((ch,i)=>{
+      const w=widths[i];
+      if(ch===' '){ x+=w+letter; return; } // スペースではIDを採番しない
+      const thisId=`a${++id}`;
+      const dash=Math.round(dashFor(w));
+      const dur=durFor(w);
+      const mx=Math.round(x);
+      defs.push(
+        `<mask id="m${id}">`+
+        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="none" stroke="#fff" stroke-width="${strokeW}" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">`+
+        `${esc(ch)}<animate attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text>`+
+        `</mask>`
+      );
+      outlines.push(
+        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="none" stroke="${color}" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" stroke-dasharray="${dash}" stroke-dashoffset="${dash}">`+
+        `${esc(ch)}<animate id="${thisId}" attributeName="stroke-dashoffset" from="${dash}" to="0" dur="${dur}" begin="${begin}" fill="freeze"/></text>`
+      );
+      fills.push(
+        `<text x="${mx}" y="${baselineY}" font-family="${family}" font-size="${size}" fill="${color}" mask="url(#m${id})">${esc(ch)}</text>`
+      );
+      begin=`${thisId}.end+0.08s`;
+      x+=w+letter;
+    });
+
+    const lastId = id ? `a${id}` : null;
+    const beginSplit = lastId ? `${lastId}.end+0.5s` : '0s';
+    const halfY=H/2;
+
+    // 原本は表示しない。参照専用の <g id="glyphs"> を作り、表示は <use> のみで行う
+    const svg =
+`<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="${W}" height="${H}" viewBox="0 0 ${W} ${H}">
+  <defs>
+    ${defs.join('\n    ')}
+    <!-- 上半分/下半分のマスク -->
+    <mask id="maskTop"><rect x="0" y="0" width="${W}" height="${halfY}" fill="#fff"/></mask>
+    <mask id="maskBottom"><rect x="0" y="${halfY}" width="${W}" height="${halfY}" fill="#fff"/></mask>
+  </defs>
+
+  <!-- 描画済みの文字群（参照専用。ここでは表示しない） -->
+  <g id="glyphs">
+    ${outlines.join('\n    ')}
+    ${fills.join('\n    ')}
   </g>
 
-  <!-- 上レイヤー：分割して左右移動 -->
-  <g id="layer_top">
-    ${lines.join('\n')}
-    ${fills.join('\n')}
-  </g>
-
-  <!-- 上半分・下半分マスク -->
-  <mask id="maskTop"><rect x="0" y="0" width="${W}" height="${halfY}" fill="#fff"/></mask>
-  <mask id="maskBottom"><rect x="0" y="${halfY}" width="${W}" height="${halfY}" fill="#fff"/></mask>
-
-  <use href="#layer_top" mask="url(#maskTop)">
-    <animateTransform attributeName="transform" type="translate" from="0 0" to="200 0" dur="${fadeSec}s" begin="${last}.end+0.5s" fill="freeze"/>
-    <animate attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${last}.end+0.5s" fill="freeze"/>
+  <!-- 下レイヤー：原本の複製をそのままフェードアウト（残像防止） -->
+  <use id="layerBottom" href="#glyphs" xlink:href="#glyphs">
+    <animate attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${beginSplit}" fill="freeze"/>
   </use>
-  <use href="#layer_top" mask="url(#maskBottom)">
-    <animateTransform attributeName="transform" type="translate" from="0 0" to="-200 0" dur="${fadeSec}s" begin="${last}.end+0.5s" fill="freeze"/>
-    <animate attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${last}.end+0.5s" fill="freeze"/>
+
+  <!-- 上レイヤー：同じ原本の複製を上下分割して左右に移動しながら消滅 -->
+  <use id="layerTopUp" href="#glyphs" xlink:href="#glyphs" mask="url(#maskTop)">
+    <animateTransform attributeName="transform" type="translate" from="0 0" to="200 0" dur="${fadeSec}s" begin="${beginSplit}" fill="freeze"/>
+    <animate attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${beginSplit}" fill="freeze"/>
+  </use>
+
+  <use id="layerTopDown" href="#glyphs" xlink:href="#glyphs" mask="url(#maskBottom)">
+    <animateTransform attributeName="transform" type="translate" from="0 0" to="-200 0" dur="${fadeSec}s" begin="${beginSplit}" fill="freeze"/>
+    <animate attributeName="opacity" from="1" to="0" dur="${fadeSec}s" begin="${beginSplit}" fill="freeze"/>
   </use>
 </svg>`;
 
-  document.getElementById('code').value=svg;
-  document.getElementById('previewArea').innerHTML=svg;
-}
+    document.getElementById('code').value = svg;
+    document.getElementById('previewArea').innerHTML = svg;
+  }
 
-document.getElementById('build').onclick=e=>{e.preventDefault();buildSVG();};
-document.getElementById('copy').onclick=e=>{e.preventDefault();const t=document.getElementById('code');t.select();document.execCommand('copy');};
-document.getElementById('download').onclick=e=>{e.preventDefault();const s=document.getElementById('code').value;const b=new Blob([s],{type:'image/svg+xml'});const u=URL.createObjectURL(b);const a=document.createElement('a');a.href=u;a.download='handwrite.svg';a.click();URL.revokeObjectURL(u);};
+  document.getElementById('build').addEventListener('click', e=>{e.preventDefault();buildSVG();});
+  document.getElementById('copy').addEventListener('click', e=>{
+    e.preventDefault();
+    const t=document.getElementById('code');
+    t.select(); t.setSelectionRange(0, 999999);
+    document.execCommand('copy');
+  });
+  document.getElementById('download').addEventListener('click', e=>{
+    e.preventDefault();
+    const svg=document.getElementById('code').value||'';
+    const blob=new Blob([svg],{type:'image/svg+xml;charset=utf-8'});
+    const url=URL.createObjectURL(blob);
+    const a=document.createElement('a');
+    a.href=url; a.download='handwrite.svg';
+    document.body.appendChild(a); a.click(); a.remove();
+    URL.revokeObjectURL(url);
+  });
 
-buildSVG();
+  // 初期表示
+  buildSVG();
 </script>
